# apicheck

./: .gitignore  .travis.yml  CREDITS.md  Cargo.toml  README.md
apicheck_plugin/: Cargo.toml
apicheck_plugin/src/: lib.rs
apicheck_plugin/tests/: simple.rs
apidiff/: Cargo.toml
apidiff/src/: error.rs  main.rs
assets/: 01.json  02.json  03.json  03.rs  04.json  04.rs  05.json  05.rs  async.json  async.rs  const_fn.json  const_fn.rs  enums_01.json  enums_01.rs  enums_02.json  enums_02.rs  functions.json  functions.rs  mods.json  mods_02.json  mods_02.rs  structs_01.json  structs_01.rs  structs_02.json  structs_02.rs  traits.json
libapicheck/: Cargo.toml
libapicheck/src/: attr.rs  config.rs  context.rs  ignore_path.rs  input.rs  items.rs  lib.rs  modules.rs  process.rs  result.rs  syntux.rs
libapicheck/src/modules/: visitor.rs
libapicheck/src/syntux/: parser.rs  session.rs
libapicheck/src/syntux/session/: ignore_path.rs
src/: main.rs
tests/: 01.rs  02.rs  attrs.rs  existential.rs  mods.rs  run_all.rs  simple.rs  struct.rs  traits.rs  use.rs
tests/utils/: error.rs  mod.rs  workdir.rs
