[package]
name = "libapicheck"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]

[dependencies]
ignore = "0.4.11"
json = "0.12"
term = "0.7"
thiserror = "1.0.25"

[dependencies.rustc_ast]
package = "rustc-ap-rustc_ast"
version = "723.0.0"

[dependencies.rustc_ast_pretty]
package = "rustc-ap-rustc_ast_pretty"
version = "723.0.0"

[dependencies.rustc_data_structures]
package = "rustc-ap-rustc_data_structures"
version = "723.0.0"

[dependencies.rustc_errors]
package = "rustc-ap-rustc_errors"
version = "723.0.0"

[dependencies.rustc_expand]
package = "rustc-ap-rustc_expand"
version = "723.0.0"

[dependencies.rustc_parse]
package = "rustc-ap-rustc_parse"
version = "723.0.0"

[dependencies.rustc_session]
package = "rustc-ap-rustc_session"
version = "723.0.0"

[dependencies.rustc_span]
package = "rustc-ap-rustc_span"
version = "723.0.0"
